Add basic subscription calls
